benchmark通るようにした ( ꒪⌓꒪)

--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -70,4 +70,6 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+%production.application.mode=prod
+%production.jpa.ddl=create
 session.cookieName=isucon_session
