--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -40,16 +40,16 @@ db.default.password=""
 db.default.logStatements=true
 
 # ScalikeJDBC 独自の ConnectionPool 設定
-db.default.poolInitialSize=10
-db.default.poolMaxSize=10
+db.default.poolInitialSize=64
+db.default.poolMaxSize=64
 # db.another.poolValidationQuery=
 
 # グローバル設定
-scalikejdbc.global.loggingSQLAndTime.enabled=true
-scalikejdbc.global.loggingSQLAndTime.logLevel=debug
-scalikejdbc.global.loggingSQLAndTime.warningEnabled=true
-scalikejdbc.global.loggingSQLAndTime.warningThresholdMillis=1000
-scalikejdbc.global.loggingSQLAndTime.warningLogLevel=warn
+scalikejdbc.global.loggingSQLAndTime.enabled=false
+# scalikejdbc.global.loggingSQLAndTime.logLevel=info
+# scalikejdbc.global.loggingSQLAndTime.warningEnabled=true
+# scalikejdbc.global.loggingSQLAndTime.warningThresholdMillis=1000
+# scalikejdbc.global.loggingSQLAndTime.warningLogLevel=warn
 
 # Evolutions
 # ~~~~~
@@ -65,11 +65,36 @@ scalikejdbc.global.loggingSQLAndTime.warningLogLevel=warn
 logger.root=ERROR
 
 # Logger used by the framework:
-logger.play=INFO
+logger.play=ERROR
 
 # Logger provided to your application:
-logger.application=DEBUG
+logger.application=ERROR
 
 %production.application.mode=prod
 %production.jpa.ddl=create
 session.cookieName=isucon_session
+
+play {
+    akka {
+        event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
+        loglevel = ERROR
+
+        actor {
+            deployment {
+                /actions {
+                    router = round-robin
+                    nr-of-instances = 1024
+                }
+            }
+
+            retrieveBodyParserTimeout = 3 second
+
+            actions-dispatcher = {
+                fork-join-executor {
+                    parallelism-factor = 256
+                    parallelism-max = 512
+                }
+            }
+        }
+    }
+}
