ʕ　 ﾟ皿ﾟ ʔ Apply Action.async

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -54,7 +54,7 @@ scalikejdbc.global.loggingSQLAndTime.warningLogLevel=warn
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+evolutionplugin=disabled
 
 # Logger
 # ~~~~~
