ʕ　 ﾟ皿ﾟ ʔ Asynchronous DB Access!!

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,8 +35,8 @@ application.langs="en"
 #
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost/isucon"
-db.default.user="isucon"
-db.default.password=""
+db.default.user="isucon_async"
+db.default.password="isucon_async"
 db.default.logStatements=true
 
 # ScalikeJDBC 独自の ConnectionPool 設定
@@ -62,7 +62,7 @@ evolutionplugin=disabled
 # by providing an application-logger.xml file in the conf directory.
 
 # Root logger:
-logger.root=ERROR
+logger.root=DEBUG
 
 # Logger used by the framework:
 logger.play=INFO
