--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -35,13 +35,14 @@ application.langs="en"
 #
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost/isucon"
-db.default.user="isucon"
-db.default.password=""
+db.default.user="isucon_async"
+db.default.password="isucon_async"
 db.default.logStatements=true
 
 # ScalikeJDBC 独自の ConnectionPool 設定
-db.default.poolInitialSize=64
-db.default.poolMaxSize=64
+db.default.poolInitialSize=16
+db.default.poolMaxSize=16
+db.default.maxQueueSize=128
 # db.another.poolValidationQuery=
 
 # グローバル設定
